# do_again_list

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  MANIFEST.in  README.md  admin.py  apps.py  docker-compose.yml  entrypoint.sh  models.py  package-lock.json  pyproject.toml  urls.py  utils.py  views.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
deploy/: EC2_ARCHITECTURE.md  redeploy.sh  setup.sh
do_again_list/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
do_again_list/migrations/: 0001_initial.py  0002_remove_gamestate_best_distance_and_more.py  0003_activity_is_built_in.py  0004_activity_code_name_activity_display_name.py  0005_gamestate_prestige.py  0005_pastevents_default_duration.py  0006_gamestate_quest_tokens.py  0007_convert_bad_activities_remove_fields.py  0008_game_state.py  0008_gamestate_max_game_speed.py  0009_gamestate_bonus_xp.py  0009_pastevents_value.py  0010_activity_is_break_impulse_resisted_count.py  0010_gamestate_hero_hp.py  0013_pastevents_next_time.py  0014_rename_pastevents_pastevent_alter_gamestate_id_and_more.py  0015_alter_pastevent_id.py  0016_gamestate_owner_pastevent_owner.py  0017_alter_pastevent_options_remove_pastevent_end_time_and_more.py  0018_rename_pastevent_activity_and_more.py  0019_rename_past_event_occurance_activity.py  (+5 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  (+3 more)
migrations/: 0002_historicalevent.py  0003_alter_historicalevent_options_and_more.py  0004_rename_date_to_end_time_add_start_time.py  0006_pastevents_min_time_between_events.py  0007_pastevents_duration_and_max_time.py  0011_alter_pastevents_start_time_nullable.py  0012_pastevents_repeats.py
nginx/: nginx-initial.conf  nginx.conf
test_project/: db.sqlite3
tests/: conftest.py  test_models.py  test_serializers.py  test_services.py  test_views_e2e.py
(+31 files in other folders)
